--- a/public/stylesheets/sass/forms.sass
+++ b/public/stylesheets/sass/forms.sass
@@ -35,3 +35,21 @@
       :right solid 1px rgb(196,196,196)
 .submit
   :font-size 12px
+  
+.errorExplanation
+  :display block
+  :padding 0px
+    :left 10px
+  :font-size 12px
+  :border 2px rgb(180,50,50) solid
+  :background rgb(255,200,200)
+  :margin-bottom 20px
+  h2, p
+    :display none
+  ul
+    :padding-left 20px
+
+.fieldWithErrors
+  input
+    :background rgb(255,200,200)
+    :border 1px red solid
