--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -53,7 +53,7 @@ div.navigation
       
 div.project_navigation
   :background rgb(160,228,237) url(../images/project_navigation_bg.jpg) no-repeat top
-  :padding 5px 10px
+  :padding 5px 10px 0 10px
   ul
     :margin 0px
     :padding 0px
@@ -67,14 +67,15 @@ div.project_navigation
       :display block
       :color rgb(26,149,168)
       :text-decoration none
-      :padding 2px 10px 2px 4px
-      :margin-bottom 2px
+      :padding 4px 10px 6px 8px
+      :margin-bottom 0px
       :font-size 12px
     a:hover
       :color rgb(0,0,0)
       :text-decoration underline
     a.active
       :color rgb(0,0,0)
+      :background rgb(255,255,255)
   li.right_side
     :float right
       :margin-
