--- a/app/views/shared/_navigation.erb
+++ b/app/views/shared/_navigation.erb
@@ -1,27 +1,30 @@
 <div class="navigation"><%  
-render_tabnav :main, :generate_css => false do 
-  add_tab do |t|
-    t.named t('.all_projects')
-    t.links_to projects_path
-    t.highlights_on :controller => :projects, :action => :index
-  end
 
-  add_tab do |t|
-    t.named t('.new_project')
-    t.links_to new_project_path
-    t.highlights_on :controller => :projects, :action => :new
-  end
+if logged_in?
+  render_tabnav :main, :generate_css => false do 
+    add_tab do |t|
+      t.named t('.all_projects')
+      t.links_to projects_path
+      t.highlights_on :controller => :projects, :action => :index
+    end
+
+    add_tab do |t|
+      t.named t('.new_project')
+      t.links_to new_project_path
+      t.highlights_on :controller => :projects, :action => :new
+    end
   
-  unless recent_projects.nil?
-    for recent_project in recent_projects
-      add_tab do |t|
-        t.named recent_project.name
-        t.links_to project_path(recent_project)
-        if recent_project == project
-        t.highlights_on :controller => controller_name
+    unless recent_projects.nil?
+      for recent_project in recent_projects
+        add_tab do |t|
+          t.named recent_project.name
+          t.links_to project_path(recent_project)
+          if recent_project == project
+          t.highlights_on :controller => controller_name
+          end
         end
       end
     end
-  end
-end  
+  end  
+end
 %></div>
