--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -12,7 +12,33 @@
     .status
       :display none
 
-.people_cards
-  .person
-    :display block
-    :border 1px #000 solid
+.index_people
+  form
+    :font-size 12px
+    :border 1px rgb(200,200,200) dashed
+    :padding 10px
+    :margin-bottom 10px
+    h2
+      :font-size 14px
+      :margin 0
+      :padding 0
+  .people_cards
+    .person
+      :display block
+      :font-size 12px
+      :border 0px rgb(200,200,200) dashed
+      :padding 5px
+        :bottom 18px
+      :margin-bottom 5px
+      :color rgb(80,80,80)
+      .thumb_avatar
+        :display block
+        :margin-right 20px
+        :float left
+      .name
+        :display block
+        :font
+          :weight bold
+          :size 12px
+      .actions
+        :float right
