--- a/public/stylesheets/sass/flash_box.sass
+++ b/public/stylesheets/sass/flash_box.sass
@@ -3,9 +3,9 @@
   :padding 5px
     :left 10px
   :font-size 12px
-  :border-bottom 2px rgb(100,100,100) solid
-  :border-top 2px rgb(100,100,100) solid
-  :background rgb(200,200,200)
+  :border-bottom 2px #ddd solid
+  :border-top 2px #ddd solid
+  :background #eee
   :margin-top 5px
   &.error
     :border-bottom 2px rgb(180,50,50) solid
