Project#add_user and #remove_user log activities targeting users, not people

--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -37,6 +37,7 @@
         :float left
       .name
         :display block
+        :color rgb(20,20,20)
         :font
           :weight bold
           :size 12px
