--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -22,8 +22,8 @@
       :font-size 14px
       :margin 0
       :padding 0
-  .people_cards
-    .person
+  .people
+    .user
       :display block
       :font-size 12px
       :border 0px rgb(200,200,200) dashed
