Adding stylesheet for activities.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -8,6 +8,7 @@ e:compact
 @import flash_box.sass
 
 @import projects.sass
+@import activities.sass
 @import comments.sass
 @import conversations.sass
 @import tasks.sass
