--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -46,7 +46,9 @@ a.add_upload
     :text-decoration none
 .uploads_current, .upload_list
   :margin 5px
+    :left 70px
   :border 1px solid rgb(230,230,230)
+  :background-color rgb(240,240,240)
   :padding 5px
   :clear both
   .upload_thumbnail
