--- a/app/views/projects/edit.haml
+++ b/app/views/projects/edit.haml
@@ -1,3 +1,7 @@
+- content_for :column do
+  oh, yeah, baby
+
+
 - form_for @project do |f|
   = project_fields(f,@project)
   = f.submit t('.submit')
