--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -86,6 +86,9 @@ div.project_navigation
       :background rgb(255,255,255)
   li.right_side
     :float right
-      :margin-
-        :right 0px
-        :left 10px
+    :margin-
+      :right 0px
+      :left 10px
+    a.active
+      :background rgb(230,230,230)
+        
