Adding feed icon and styles to suscribe.

--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -1,2 +1,11 @@
 .new_project,.edit_project
   :padding 30px
+  
+.subscribe
+  :margin-top 15px
+  a
+    :display block
+    :font-size 12px
+    :padding-left 25px
+    :background url(/images/feed.png) no-repeat left
+    
