Actually, I like better a solid box for invite people.

--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -15,7 +15,8 @@
 .index_people
   form
     :font-size 12px
-    :border 1px rgb(200,200,200) dashed
+    :border 1px rgb(220,220,220) solid
+    :background-color rgb(240,240,240)
     :padding 10px
     :margin-bottom 10px
     h2
