Styles for project sidebar

--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -1,6 +1,13 @@
 .new_project,.edit_project
   :padding 30px
   
+.project_list
+  .project_link
+    :font-size 12px
+    .unread_comment_count
+      :float right
+      :font-weight normal
+
 .subscribe
   :margin-top 15px
   a
