Fixing locale file. Disabling list_activities_for_all_projects for user show temporarily.

--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -11,4 +11,4 @@
       = list_projects(@user.projects)
       
 %h2= @user.name  
-= list_activities_for_all_projects(@user.activities)
+//= list_activities_for_all_projects(@user.activities)
