Prettier user profile for user show.

--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -1,14 +1,16 @@
 - content_for :column do
-  %h2= t '.profile'
-  .vcard
-    = link_to 'Download vCard'
-  .name= @user.name
-  .email= mail_to @user.email, @user.email
+  .profile
+    %h2= t '.profile'
+    .vcard
+      = link_to 'Download vCard'
+    .name= @user.name
+    .email= mail_to @user.email, @user.email
 
-  %h2= t '.projects'
-  .project_list
-    .project
-      = list_projects(@user.projects)
+  .projects
+    %h2= t '.projects'
+    .project_list
+      .project
+        = list_projects(@user.projects)
       
-%h2= @user.name  
+%h2= t('.recent_activity_for', :user_name => @user.name)  
 //= list_activities_for_all_projects(@user.activities)
