--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -7,6 +7,19 @@
     input
       :width 100%
 
+.show_users
+  .content
+    h2
+      :margin 5px 0 0 10px
+  .column_wrap
+    .profile
+      :margin-bottom 20px
+    .vcard, .name, .email
+      :font-size 12px
+    .vcard
+      :float right
+    
+
 .edit_users, .update_users
   label
     :float left
