User show only lists activities for projects shared with current_user.

--- a/app/views/users/show.haml
+++ b/app/views/users/show.haml
@@ -14,4 +14,4 @@
       
 %h2= t('.recent_activity_for', :user_name => @user.name)
 #activities
-  = list_activities(@user.activities)
+  = list_activities(@visible_activities)
