--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -14,6 +14,9 @@ form#new_comment, form.edit_comment
     a
       :font-size 12px
       :font-weight bold
+  .when
+    :float right
+    :color rgb(150,150,150)
   p.actions
     :position relative
     :margin 0px
