--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -4,7 +4,8 @@ form#new_comment, form.edit_comment
       :width 100%
       :height 45px
   .submit
-    :text-align right
+    :margin-top 7px
+    :float right
 
 .comment
   :border-bottom solid 1px rgb(230,230,230)
