Styling index people for project

--- a/public/stylesheets/sass/people.sass
+++ b/public/stylesheets/sass/people.sass
@@ -36,11 +36,13 @@
         :display block
         :margin-right 20px
         :float left
-      .name
-        :display block
-        :color rgb(20,20,20)
-        :font
-          :weight bold
-          :size 12px
       .actions
         :float right
+      .text
+        :margin-left 68px
+        .name
+          :display block
+          :color rgb(20,20,20)
+          :font
+            :weight bold
+            :size 12px
