--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -48,4 +48,7 @@ form.task_form_wrap
           :top solid 1px rgb(90,90,90)
           :left solid 1px rgb(150,150,150)
           :bottom solid 1px rgb(150,150,150)
-          :right solid 1px rgb(90,90,90)          
+          :right solid 1px rgb(90,90,90)
+
+.task_lists
+  :clear both
