--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -1,30 +1,35 @@
 form#new_comment, form.edit_comment
   .body
+    :padding 5px
     textarea
-      :width 100%
+      :width 595px
       :height 80px
   .submit
     :text-align right
 
-.comment
-  :padding-top 5px
-  .name
-    :font-size 12px
-    :border-bottom solid 1px rgb(230,230,230)    
-    a
-      :font-size 12px
-      :font-weight bold
-  .date
+form.edit_comment
+  :background rgb(245,245,245)
+  :padding 5px
+  .hours
+    label
+      :display inline
+    input
+      :width 3em
+  .body
+    textarea
+      :width 575px
+  .submit
     :float right
-    :font-size 12px
-    a
-      :font-size 12px
-      :font-weight bold    
+    :width 130px
+    :padding 5px
+      :right 8px
+  
+.comment
+  :padding 5px 0px
   p.actions
     :position relative
     :margin 0px
-    span    
-      :background url(../images/comment_actions_bg.jpg) no-repeat
+    span
       :padding 3px 0px
         :left 2px
       :overflow auto
@@ -32,5 +37,32 @@ form#new_comment, form.edit_comment
       :display block
       :width 30px
       :height 45px
-      :left -24px
-      :top 2px
+  .info
+    :width 100px
+    :float left
+    .thumb_avatar
+      :float right
+    .hours
+      :padding-left 1px
+      :padding-right 10px
+      :clear both
+      :font-size 11px
+      img
+        :vertical-align middle
+      span
+        :vertical-align middle
+  .block
+    :width 500px
+    :float right
+    .name
+      :font-size 12px
+      :border-bottom solid 1px rgb(235,235,235)
+      :padding-bottom 5px
+      a
+        :font-size 12px
+        :font-weight bold
+    .date
+      :float right
+      :font-size 12px
+      :color rgb(120,120,120)
+
