--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -1,5 +1,23 @@
 .new_project,.edit_project
   :padding 30px
+
+.people_list
+  .person
+    :font-size 12px
+    :margin-left 10px
+    :padding-left 15px
+    :background transparent url(/images/grey_dot.png) no-repeat scroll 0 4px
+  a
+    :text-decoration none
+  a:hover
+    :text-decoration underline
+  .status
+    :float right
+    :color #777
+  .online
+    :background transparent url(/images/green_dot.png) no-repeat scroll 0 4px
+    .status
+      :display none
   
 .project_list
   .project_link
