--- a/app/views/people/_person.haml
+++ b/app/views/people/_person.haml
@@ -1,4 +1,4 @@
 .person{:id => "person_#{person.id}", :class => person_status(person)}
-  = person.login
+  = user_link(person)
   .status
     = time_ago_in_words(person.updated_at)
