Darker link color and posted_date for comments

--- a/public/stylesheets/sass/projects.sass
+++ b/public/stylesheets/sass/projects.sass
@@ -8,6 +8,7 @@
     :padding-left 15px
     :background transparent url(/images/grey_dot.png) no-repeat scroll 0 4px
   a
+    :color rgb(80,80,80)
     :text-decoration none
   a:hover
     :text-decoration underline
