--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -14,7 +14,7 @@
           hr
   .block
     .date
-      = comment.created_at.strftime("%I:%M %p &mdash; %b %d %Y")
+      = posted_date comment.created_at
     .name
       = link_to comment.user.name, user_path(comment.user)
     .body
