--- a/public/stylesheets/sass/default.sass
+++ b/public/stylesheets/sass/default.sass
@@ -41,6 +41,9 @@ a:hover
 div.container
   :width 960px
   :margin 0px auto
+p
+  :margin 0px auto
+  :padding 0px
 
 span.unread_comment_count
   :font-weight bold
