Actions now work without javascript, using CSS hover styles

--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,6 +1,6 @@
 .comment{:id => "comment_#{comment.id}" }
   .info
-    %p.actions{ :style => 'display: none' }
+    %p.actions
       %span
         = edit_comment_link(comment)
         = delete_comment_link(comment)
