--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -26,7 +26,11 @@ form.edit_comment
       :right 8px
   
 .comment
+  &:hover
+    p.actions
+      :visibility visible
   p.actions
+    :visibility hidden
     :position relative
     :margin 0px
     span
@@ -63,6 +67,6 @@ form.edit_comment
         :font-weight bold
     .date
       :float right
-      :font-size 12px
-      :color rgb(120,120,120)
+      :font-size 10px
+      :color rgb(180,180,180)
 
