Absolute routes for images in sass files

--- a/public/stylesheets/sass/header.sass
+++ b/public/stylesheets/sass/header.sass
@@ -2,7 +2,7 @@ div.header
   h1
     :float left
     :display block
-    :background url(../images/header_logo.jpg) no-repeat
+    :background url(/images/header_logo.jpg) no-repeat
     :width 95px
     :height 17px
     span
@@ -10,11 +10,11 @@ div.header
   div.user_wrap
     :float right
     :width 340px
-    :background rgb(60,60,60) url(../images/header_user_wrap_bg.jpg) no-repeat top
+    :background rgb(60,60,60) url(/images/header_user_wrap_bg.jpg) no-repeat top
     :margin-top 10px
     div.user    
       :padding 10px
-      :background url(../images/header_user_bg.jpg) no-repeat bottom
+      :background url(/images/header_user_bg.jpg) no-repeat bottom
       
       div.avatar
         :float left
