--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -59,7 +59,7 @@ div.navigation
       :background rgb(211,209,209)
       
 div.project_navigation
-  :background rgb(160,228,237) url(../images/project_navigation_bg.jpg) no-repeat top
+  :background rgb(160,228,237) url(/images/project_navigation_bg.jpg) no-repeat top
   :padding 5px 10px
   ul
     :margin 0px
