--- a/public/stylesheets/sass/users.sass
+++ b/public/stylesheets/sass/users.sass
@@ -41,9 +41,9 @@ div.upload_avatar
       :width 48px
       :height 48px
       :margin-right 5px
-      :background url(../images/avatar_thumb_corners.png)
+      :background url(/images/avatar_thumb_corners.png)
     a:hover
-      :background url(../images/avatar_thumb_corners_hover.png)
+      :background url(/images/avatar_thumb_corners_hover.png)
   p.actions
     :padding-top 2px
     :margin 0px
