--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -1,6 +1,6 @@
 div.wrapper 
   :clear both
-  :background rgb(255,255,255) url(../images/wrapper_bg.jpg) no-repeat bottom
+  :background rgb(255,255,255) url(/images/wrapper_bg.jpg) no-repeat bottom
 div.content_wrap
   :float left
   :width 610px
