--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -38,9 +38,9 @@ a.add_task_link
   
 form.task_form_wrap
   :margin-top 5px
-  :background rgb(173,173,173) url(../images/form_wrap_bg.jpg) no-repeat top
+  :background rgb(173,173,173) url(/images/form_wrap_bg.jpg) no-repeat top
   div.task_form
-    :background url(../images/form_bg.jpg) no-repeat bottom
+    :background url(/images/form_bg.jpg) no-repeat bottom
     :padding 10px
     .text_field
       input
