--- a/public/stylesheets/sass/uploads.sass
+++ b/public/stylesheets/sass/uploads.sass
@@ -3,7 +3,7 @@
     :position relative
     :margin 0px
     span    
-      :background url(../images/comment_actions_bg.jpg) no-repeat
+      :background url(/images/comment_actions_bg.jpg) no-repeat
       :padding 3px 0px
         :left 2px
       :overflow auto
