Typo. Consistent margins for comments and activities. Unread comment count should be a float.

--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -26,6 +26,9 @@ form.edit_comment
       :right 8px
   
 .comment
+  :margin 0px
+    :top 15px
+    :bottom 15px
   &:hover
     p.actions
       :visibility visible
