--- a/public/stylesheets/sass/calendars.sass
+++ b/public/stylesheets/sass/calendars.sass
@@ -1,6 +1,5 @@
 div.calendar
   :padding 10px
-  :width 650px
   table
     :width 100%
   th
@@ -11,8 +10,13 @@ div.calendar
     :font-size 10px
     :padding 4px
     :border solid 1px rgb(100,100,100)
-    :width 14% 
-    :height 76px
+    p
+      :background rgb(0,0,255)
+      :color rgb(255,255,255)
+      :padding 4px
+      :margin-top 4px
+      :font-size 12px
+      :text-align center
   td.this_month
     :border solid 1px rgb(100,100,100)
   td.previous_month
