--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,6 +14,9 @@
       =navigation(@current_project,@recent_projects)
       .wrapper
         =project_navigation(@current_project)
+        -unless @content_for_banner.nil?
+          .banner
+            = yield :banner
         - if flash[:success]
           .flash_box.success= flash[:success]
         - if flash[:error]
