--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -1,4 +1,9 @@
 form#new_comment, form.edit_comment
+  .hours
+    label
+      :display inline
+    input
+      :width 3em
   .body
     :padding 5px
     textarea
