--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -1,2 +1,6 @@
 .body.text_area
   = f.text_area :body
+- unless show_hours == false
+  .hours.text_field
+    = f.label :hours
+    = f.text_field :hours
