--- a/public/stylesheets/sass/calendars.sass
+++ b/public/stylesheets/sass/calendars.sass
@@ -25,3 +25,33 @@ div.calendar
   td.next_month
     :border solid 1px rgb(200,200,200)
     :border-top solid 1px rgb(100,100,100)
+  td.total
+    :background rgb(240,240,240)
+    :border
+      :right solid 1px rgb(200,200,200)
+      :top solid 1px rgb(200,200,200)
+      :bottom solid 1px rgb(200,200,200)
+  td.blank
+    :border-left none
+    :border-bottom none
+    :border-right solid 1px rgb(200,200,200)
+  td.max_total
+    :border solid 1px rgb(200,200,200)
+div.calendar_navigation
+  :font-size 12px
+  p.month_value
+    :padding-top 3px
+    :margin 10px 10px
+    span
+      :padding 0px 5px
+      :font-size 18px
+    a
+      :font-size 14px
+      :color rgb(255,255,255)
+      :background rgb(200,200,200)
+      :text-decoration none
+      :padding 1px 5px
+        :bottom 3px
+    a:hover
+      :color rgb(255,255,255)
+      :background rgb(0,0,255)  
