--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -78,3 +78,9 @@ form.edit_comment
       :font-size 10px
       :color rgb(180,180,180)
 
+.comment_hover
+  .block
+    .name
+      :border-bottom solid 1px rgb(200,200,200)
+    .date
+      :color rgb(0,0,0)
