--- a/app/views/task_lists/index.haml
+++ b/app/views/task_lists/index.haml
@@ -1,10 +1,4 @@
-- content_for :column do
-  = new_task_list_link(@current_project)
-  %h2.title_with_button
-    Task Lists
-  .task_lists
-    = list_task_lists(@current_project,@task_lists)
-  =filter_box
-  
-#comments
-  = list_comments(@comments)
+=task_list_column(@current_project,@task_lists,@task_list)
+
+#activities
+  = list_activities(@activities)
