--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -8,6 +8,24 @@ div.task_list_wrap
   div.task_list
     a
       :font-size 12px
+  p.actions
+    :position relative
+    :margin 0px
+    :line-height 1em
+    :font-size 1em
+    span
+      :line-height 1em
+      :background rgb(230,230,230)
+      :padding 4px 0px
+        :left 2px
+        :bottom 0px
+      :overflow auto
+      :position absolute
+      :display block
+      :width 45px
+      :height 20px
+      :left -46px
+      :top 2px
 
 div.task
   a
@@ -17,7 +35,7 @@ div.task
     :margin 0px
     :line-height 1em
     :font-size 1em
-    span    
+    span
       :line-height 1em
       :background rgb(230,230,230)
       :padding 4px 0px
@@ -29,7 +47,7 @@ div.task
       :width 45px
       :height 20px
       :left -45px
-      :top 2px    
+      :top 2px
     
 a.add_task_link
   :font-size 12px
