--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -37,6 +37,8 @@ div.column_wrap
       :bottom 3px
       :top 5px
     :color rgb(60,60,60)
+    a
+      :color rgb(60,60,60)
     
 .sort
   :margin
