--- a/app/views/tasks/show.haml
+++ b/app/views/tasks/show.haml
@@ -1,4 +1,4 @@
-=task_list_column(@current_project,@task_lists,@task_list)
+=task_list_column(@current_project,@task_lists,@task)
   
 %h2.title
   Comment on
