added css3 rounded corners to some design elements

--- a/public/stylesheets/sass/tasks.sass
+++ b/public/stylesheets/sass/tasks.sass
@@ -56,9 +56,10 @@ a.add_task_link
   
 form.task_form_wrap
   :margin-top 5px
-  :background rgb(173,173,173) url(/images/form_wrap_bg.jpg) no-repeat top
+  :background rgb(173,173,173)
+  :-moz-border-radius 8px
+  :-webkit-border-radius 8px  
   div.task_form
-    :background url(/images/form_bg.jpg) no-repeat bottom
     :padding 10px
     .text_field
       input
