--- a/public/stylesheets/sass/navigation.sass
+++ b/public/stylesheets/sass/navigation.sass
@@ -2,7 +2,9 @@
   :-moz-border-radius
     :topleft 5px
     :topright 5px
-
+  :-webkit-border-top-left-radius 5px
+  :-webkit-border-top-right-radius 5px
+  
 div.global_navigation
   :background rgb(76,74,74)
   :float right
