--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -1,6 +1,11 @@
 div.wrapper 
   :clear both
-  :background rgb(255,255,255) url(/images/wrapper_bg.jpg) no-repeat bottom
+  :background rgb(255,255,255)
+  :-moz-border-radius
+    :bottomleft 5px
+    :bottomright 5px
+  :-webkit-border-bottom-left-radius 5px
+  :-webkit-border-bottom-right-radius 5px
 div.content_wrap
   :float left
   :width 610px
@@ -45,13 +50,19 @@ div.column_wrap
     :top 5px
   :background rgb(240,240,240)
   :border solid 1px rgb(220,220,220)
-  :padding 5px
+  :padding 8px
+  :-moz-border-radius 8px
+  :-webkit-border-radius 8px  
   .filters
-    :padding-top 5px
+    :padding-top 15px
     :font-size 12px
   a
     :font-size 14px
     :padding 2px 4px
+    :-moz-border-radius 4px
+    :-webkit-border-radius 4px
+    :background rgb(100,100,100)
+    :color rgb(200,200,200)
   a.active
     :background rgb(0,0,255)
     :color rgb(255,255,255)
