minor styling to side column

--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -21,7 +21,11 @@ div.column_wrap
   :background rgb(230,230,230)
   :width 300px
   :padding 10px
-  :border-left 1px dashed rgb(200,200,200)
+  :-moz-border-radius
+    :bottomleft 5px
+    :bottomright 5px
+  :-webkit-border-bottom-left-radius 5px
+  :-webkit-border-bottom-right-radius 5px
   h2
     :font-size 12px
     :text-transform uppercase
