activities has a column for comment_type, changed column settings, added column settings for conversations

--- a/app/views/comments/_settings.haml
+++ b/app/views/comments/_settings.haml
@@ -1,4 +1,6 @@
-.sort
+.column_settings
+  %h2
+    Comments Settings
   =link_to 'Ascending', '', :class => 'active'
   or
   =link_to 'Descending', ''
