--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -49,7 +49,10 @@ div.column_wrap
     a
       :color rgb(60,60,60)
     
-.sort
+.column_settings
+  h2
+    :margin 0px
+    :color rgb(150,150,150)
   :margin
     :top 5px
   :background rgb(240,240,240)
@@ -58,10 +61,10 @@ div.column_wrap
   :-moz-border-radius 8px
   :-webkit-border-radius 8px  
   .filters
-    :padding-top 15px
+    :padding-top 10px
     :font-size 12px
   a
-    :font-size 14px
+    :font-size 12px
     :padding 2px 4px
     :-moz-border-radius 4px
     :-webkit-border-radius 4px
