minor styling for column settings

--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -70,6 +70,9 @@ div.column_wrap
     :-webkit-border-radius 4px
     :background rgb(100,100,100)
     :color rgb(200,200,200)
+  a:hover,a.active:hover
+    :background rgb(85,173,10)
+    :color rgb(255,255,255)
   a.active
     :background rgb(0,0,255)
     :color rgb(255,255,255)
