--- a/app/views/task_lists/_column.haml
+++ b/app/views/task_lists/_column.haml
@@ -4,4 +4,4 @@
     =link_to 'Task Lists', project_task_lists_path(project)
   .task_lists  
     = list_task_lists(project,task_lists,current_target)
-  =filter_box
+  =comments_settings
