Allow hiding/showing users hours on the calendar

--- a/app/views/hours/index.haml
+++ b/app/views/hours/index.haml
@@ -4,7 +4,7 @@
     = build_calendar(@comments,@year,@month)
 
 -content_for :column do
-  rwar
+  =list_hour_users(@users_displayed)
  
 = new_hour_comment_form(@current_project) 
 #comments
