calendar now updates if you post a comment on the hours page

--- a/app/views/hours/_user_filter.haml
+++ b/app/views/hours/_user_filter.haml
@@ -1,5 +1,8 @@
-.user_filter
-  = check_box_tag '', user.login, true, :id => "filter_#{user.login}"
-  = label_tag "filter_#{user.login}", user.login
-  = observe_hour_filter("filter_#{user.login}")
+%option
+  All users
+- for user in users 
+  %option{:value => user.login}
+    = "#{user.login} "
+    - unless user.name.blank?
+      (#{user.name})
   
