Hours can now be posted with any comment

--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -12,7 +12,13 @@ form#new_comment, form.edit_comment
   .submit
     :margin-top 3px
     :float right
-
+  a.add_upload, a.add_hours
+    :display block
+    :margin-left 5px
+    :font-size 12px
+    &:hover
+      :text-decoration none
+      
 form.edit_comment
   :background rgb(245,245,245)
   :padding 5px
