--- a/app/views/comments/_new.haml
+++ b/app/views/comments/_new.haml
@@ -1,4 +1,4 @@
-- show_hours ||= false
+- show_hours ||= true
 - remote_form_for form_url do |f|
   = comment_fields(f,comment,show_hours)
   = upload_a_file_link(comment)
