--- a/public/stylesheets/sass/comments.sass
+++ b/public/stylesheets/sass/comments.sass
@@ -77,6 +77,13 @@ form.edit_comment
       :float right
       :font-size 10px
       :color rgb(180,180,180)
+    .body
+      :font-size 12px
+      :color rgb(60,60,60)
+      p
+        :font-family "Lucida Grande",Verdana,Arial,Helvetica,sans-serif
+        :line-height 1.3em
+        :margin 2px 0 10px
 
 .comment_hover
   .block
