--- a/app/views/comments/_settings.haml
+++ b/app/views/comments/_settings.haml
@@ -1,9 +1,10 @@
 .column_settings
   %h2
     Comments Settings
-  =comments_ascending_user_link
-  or
-  =comments_descending_user_link
+  .toggle
+    =comments_ascending_user_link
+    or
+    =comments_descending_user_link
   .filters
     .radio_button.uploads
       =radio_button_tag 'sort', 'all', 1
