--- a/public/stylesheets/sass/activities.sass
+++ b/public/stylesheets/sass/activities.sass
@@ -37,3 +37,7 @@
       :border-bottom solid 1px rgb(200,200,200)
     .date
       :color rgb(0,0,0)
+
+.activity_upload_add
+  img
+    :float left
