fixing comment filtering so it works on all pages

--- a/app/views/hours/index.haml
+++ b/app/views/hours/index.haml
@@ -10,4 +10,4 @@
  
 = new_hour_comment_form(@current_project) 
 #comments
-  =list_comments(@comments)
+  =list_comments(@comments,@current_project)
