lots of styling to uploads, refactors uploads views, placed comments actions in a partial, added file image in uploads

--- a/app/views/activities/_upload_create.haml
+++ b/app/views/activities/_upload_create.haml
@@ -1,5 +1,5 @@
 .activity_action.activity_upload_add
-  = file_icon_image(activity.target.image_filename,'48px')
+  = file_icon_image(activity.target,'48px')
   .item
     %span.name= link_to activity.target.user.name, user_path(activity.target.user)
     %span
