fixed minor styling issue in navigation, styled link buttons

--- a/app/views/uploads/index.haml
+++ b/app/views/uploads/index.haml
@@ -1,8 +1,8 @@
 - content_for :column do
-  = add_file_link
+  = add_upload_link
   
 #uploads
-  - if @uploads.length == 0
+  - if @uploads.empty?
     There are no files uploaded for this project.
   - else
     =list_uploads(@current_project,@uploads)
