--- a/public/stylesheets/sass/wrapper.sass
+++ b/public/stylesheets/sass/wrapper.sass
@@ -92,3 +92,14 @@ div.column_wrap
       :background rgb(0,0,255)
       :color rgb(255,255,255)
       
+a.button
+  :background url(../images/button_bg.jpg) no-repeat left
+  :font-size 12px
+  :padding 5px
+    :left 20px
+  span
+    :color rgb(40,40,40)
+    :padding 5px
+      :right 10px
+    :font-weight bold
+    :background url(../images/button_wrap_bg.jpg) no-repeat right    
