--- a/app/views/pages/edit.haml
+++ b/app/views/pages/edit.haml
@@ -1,5 +1,5 @@
 - content_for :column do
-  = create_note_link(@current_project,@page)
+  = add_note_link(@current_project,@page)
 
 #edit_page
   - form_for [@current_project,@page] do |f|
