--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -12,7 +12,24 @@
     .date
       = posted_date comment.created_at
     .name
+      - if is_controller? :projects, :index
+        = '[' + link_to(comment.project.name, project_path(comment.project)) + ']'
       = link_to comment.user.name, user_path(comment.user)
+      - if is_controller? :projects
+        - case comment.target_type
+        - when 'Conversation'
+          = "commented on"
+          = link_to_conversation(comment.target.target)
+        - when 'Project'
+          = ""
+        - when 'Task'
+          = "commented on"
+          = link_to_task_list(comment.target.target.task_list)
+          = "/"
+          = link_to_task(comment.target.target)
+        - when 'TaskList'
+          = "commented on a task list:"
+          = link_to_task_list(comment.target.target)
     .body
       = comment.body_html
     - if comment.uploads.count > 0
